bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `Assert<false>: DiscriminantInRange` is not satisfied
   --> tests/09-variant-out-of-range.rs:17:5
    |
17  |     External,
    |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `Assert<false>`
    |
    = help: the trait `DiscriminantInRange` is implemented for `Assert<true>`
note: required by a bound in `DiscriminantCheck`
   --> src/lib.rs
    |
    |     pub struct DiscriminantCheck<T: DiscriminantInRange> {
    |                                     ^^^^^^^^^^^^^^^^^^^ required by this bound in `DiscriminantCheck`
